--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
-  "name": "@pokemonon/babel-preset-common",
-  "version": "0.0.1",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "@pokemonon/babel-preset-common",
+    "version": "0.0.1",
+    "main": "index.js",
+    "license": "MIT",
+    "devDependencies": {
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
+        "husky": "^6.0.0",
+        "standard-version": "^9.3.0",
+        "eslint": "^7.27.0",
+        "@pokemonon/eslint-plugin-common": "~0.0.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "scripts": {
+        "dump": "HUSKY=0 standard-version --release-as",
+        "release": "npm publish"
+    }
 }
