--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "main": "index.js",
     "license": "MIT",
     "devDependencies": {
+        "@pokemonon/eslint-plugin-common": "~0.0.1",
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0",
-        "husky": "^6.0.0",
-        "standard-version": "^9.3.0",
         "eslint": "^7.27.0",
-        "@pokemonon/eslint-plugin-common": "~0.0.1"
+        "husky": "^6.0.0",
+        "standard-version": "^9.3.0"
     },
     "config": {
         "commitizen": {
@@ -19,5 +19,14 @@
     "scripts": {
         "dump": "HUSKY=0 standard-version --release-as",
         "release": "npm publish"
+    },
+    "dependencies": {
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-proposal-class-properties": "^7.14.5",
+        "@babel/plugin-proposal-decorators": "^7.14.5",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "core-js": "^3.15.1"
     }
 }
